--- a/AWS/StatusFeed/env.ini
+++ b/AWS/StatusFeed/env.ini
@@ -1,10 +1,7 @@
-[AWS]
-aws_rss_feeds=~/aws-services-rss-feeds.txt
-
 ; Example section that will match what is in the README.MD 
 [RFD_PRD]
-entity_application_feed_url=https://xyz88770.live.dynatrace.com/api/v1/entity/applications?tag=AWS_STATUS&includeDetails=false
-event_feed_url=https://xyz88770.live.dynatrace.com/api/v1/events
-api_token=V2nXtTB9RSWgIdc7RCHfD
+entity_application_feed_url=https://<your_tenant_id>.live.dynatrace.com/api/v1/entity/applications?tag=AWS_STATUS&includeDetails=false
+event_feed_url=https://<your_tenant_id>.live.dynatrace.com/api/v1/events
+api_token=<your_token>
 aws_region=us-
-aws_rss_feeds=/home/ec2-user/dynatrace/aws_status/aws-esp-oh-services-rss-feeds.txt
+aws_rss_feeds=~/aws-services-rss-feeds.txt
